# azure-flask-postgres-flexible-appservice

./: .cruft.json  .gitignore  README.md  azure.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt
.devcontainer/: Dockerfile_dev  devcontainer.json
.github/workflows/: azure-dev.yml  cruft.yml  format.yml  tests.yaml  tests.yml
infra/: main.bicep  web.bicep
src/: entrypoint.sh  pyproject.toml  requirements.txt  seed_data.json
src/flaskapp/: __init__.py  models.py  pages.py  seeder.py
src/flaskapp/config/: development.py  production.py
src/flaskapp/migrations/: alembic.ini  env.py
src/flaskapp/migrations/versions/: 7e0fa0af05a6_.py  8f6c214ddf1b_.py  9a7ab4b24eec_.py  bdb17ae99c7e_.py
src/templates/: base.html  cruise_detail.html  destination_detail.html  destinations.html
src/tests/: conftest.py  smoketests.py  test_playwright.py
src/tests/local/: conftest.py  test_gunicorn.py  test_pages.py  test_playwright.py
src/tests/smoke/: README.md
