[project]
name = "flaskapp"
version = "1.0.0"
description = "Create a relecloud demo application with flask and postgres-flexible"
dependencies = [
    "azure-monitor-opentelemetry",
    "Flask==2.3.2",
    "SQLAlchemy==2.0.17",
    "psycopg2-binary==2.9.6",
    "Flask-Migrate==4.0.4",
    "Flask-SQLAlchemy==3.1.1",
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
